修复了一批阻止 main.py 启动的语法/逻辑错误，并补全依赖配置以便训练正常跑起来。
main.py: 日志格式改为 levelname，batch.trg_y 修正，CPU 环境下跳过 DataParallel 包装。
create_exp_folder.py: 去掉重复 mkdir，首次训练时不再抛 FileExistsError。
tf_model.py: 修正 transpose 拼写、MultiHeadedAttention 缺少 super/__init__ 和 self.h 赋值、PositionwiseFeedForward 的 forward 缩进、DecoderLayer 的属性名，生成器输出改为 logits（配合交叉熵），为 beam search 保持正常在 beam_decoder.py 内部对生成器输出做 log_softmax。
train_utils.py: 简化损失计算为标准前向 + CrossEntropyLoss，正常反向和 NoamOpt 更新。
config.py: 根据 torch.cuda.is_available() 自动选择 GPU/CPU，CPU 场景不再报设备错误。
requirements.txt: 补充 json5==0.9.24，并将 python=3.10 改成注释，方便 pip install -r

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ tqdm==4.67.1
 sentencepiece==0.2.1
 sacrebleu==2.5.1
 numpy==1.23.3
+json5==0.9.24
 
-#  python=3.10
+# python==3.10
 # 我尝试了40系列的显卡，这说明30系列的显卡可能也适用
-# torch==1.12.1，CUDA=11.3
+#torch==1.12.1
+#CUDA=11.3
 
 # 在50系列显卡（可能更高级的显卡）
 # torch=2.7.1，CUDA=12.8
